2003-04-18  Sam Steingold  <sds@gnu.org>

	* condition.lisp (expand-restart-case): associate when ERROR-OF-TYPE
	this takes care of item (6) in Issue 76

2003-04-18  Sam Steingold  <sds@gnu.org>

	* stream.d (broadcast_stream_last): new function
	(BUILT-IN-STREAM-ELEMENT-TYPE): fixed a crash with SYNONYM-STREAM
	pointing to a non-built-in stream;
	handle BROADCAST-STREAM as per Issue 21
	(STREAM-EXTERNAL-FORMAT): ditto

2003-04-16  Sam Steingold  <sds@gnu.org>

	* loadform.lisp (mlf-unquote): removed
	(mlf-init-function): use SUBLIS instead of MLF-UNQUOTE
	Reported by Christophe Rhodes <csr21@cam.ac.uk>

2003-04-18  Sam Steingold  <sds@gnu.org>

	* backquote.lisp (eval-self-p): T evaluates to itself too
	(maybe-unquote): new function - the dual for MAYBE-QUOTE
	(bq-optimize-append): avoid consing up BUTLAST twice;
	do not destructively modify input lists (suggested by Kaz)
	(bq-optimize-list*): call MAYBE-UNQUOTE instead of the
	obsolete BQ-DROP-SUPERFLUOUS-QUOTES
	(bq-drop-superfluous-quotes): removed

2003-04-10  Kaz Kylheku  <kaz@ashi.footprints.net>

	* backquote.lisp (bq-optimize-vec): New function.
	(bq-vec-expand): Use it if optimization is turned on.

2003-04-18  Sam Steingold  <sds@gnu.org>

	* encoding.d (init_encodings_2): unintern CHARSET:WINDOWS-1255 and
	CHARSET:WINDOWS-1258 when CHARSET:CP1255 and CHARSET:CP1258 are void
	Reported by Jörg Höhle <Joerg-Cyril.Hoehle@t-systems.com>

2003-04-18  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (make-xterm-io-stream) [UNIX]: new function
	* clos.lisp (need-gf-already-called-warning-p): new function
	(warn-if-gf-already-called): use it
	(std-remove-method): use it and not warn on removing methods when
	*WARN-IF-GF-ALREADY-CALLED* is NIL

2003-04-17  Sam Steingold  <sds@gnu.org>

	implemented feature request #[ 723360 ]: restart keyword
	commands in debugger
	* reploop.lisp (break-loop): use restart name as the command and
	:Rnum as the abbreviation; re-align help messages
